--- a/EnglishAPPDemo/View/RechargeHintView.xib
+++ b/EnglishAPPDemo/View/RechargeHintView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RechargeHintView" customModule="EnglishAPPDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="203" height="306"/>
+            <rect key="frame" x="0.0" y="0.0" width="203" height="244"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="943-Z9-kUj">
@@ -25,24 +25,10 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="102积分" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3i-0x-7av">
-                            <rect key="frame" x="66" y="59" width="63" height="21"/>
+                            <rect key="frame" x="70" y="42" width="63" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="剩余积分：0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51V-2O-pwe">
-                            <rect key="frame" x="66" y="82" width="70" height="16"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                            <color key="textColor" red="1" green="0.40784313725490196" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="书名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UR1-5H-nm5">
-                            <rect key="frame" x="87" y="112" width="28" height="15"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                            <color key="textColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="人教版PEP 三年级上册 " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELb-Tg-FXP">
@@ -68,33 +54,39 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="剩余积分：0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51V-2O-pwe">
+                            <rect key="frame" x="66" y="91" width="70" height="16"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                            <color key="textColor" red="1" green="0.40784313725490196" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="书名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UR1-5H-nm5">
+                            <rect key="frame" x="87" y="71" width="28" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                            <color key="textColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hs6-qm-dEp">
-                    <rect key="frame" x="79.5" y="255" width="44" height="44"/>
-                    <state key="normal" image="bt_cancelClear"/>
-                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="hs6-qm-dEp" firstAttribute="top" secondItem="943-Z9-kUj" secondAttribute="bottom" constant="31" id="8JL-PO-PQd"/>
-                <constraint firstAttribute="bottom" secondItem="943-Z9-kUj" secondAttribute="bottom" constant="82" id="NMP-Ef-2Cp"/>
-                <constraint firstItem="943-Z9-kUj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="NfD-k6-XdF"/>
-                <constraint firstItem="943-Z9-kUj" firstAttribute="centerX" secondItem="hs6-qm-dEp" secondAttribute="centerX" id="WqM-Nn-vCE"/>
-                <constraint firstItem="943-Z9-kUj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="feC-4z-ruh"/>
-                <constraint firstItem="943-Z9-kUj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="oTn-XE-Bqv"/>
+                <constraint firstItem="943-Z9-kUj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EcV-Jf-zOE"/>
+                <constraint firstItem="943-Z9-kUj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Kjf-rB-mGL"/>
+                <constraint firstItem="943-Z9-kUj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="d9o-kh-b4w"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="943-Z9-kUj" secondAttribute="bottom" constant="20" id="uBl-59-TaR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="cancelBtn" destination="hs6-qm-dEp" id="w6S-1T-DV9"/>
+                <outlet property="backBtn" destination="0wR-Kq-DaX" id="KUd-uM-3L6"/>
                 <outlet property="headView" destination="943-Z9-kUj" id="02d-go-mCt"/>
+                <outlet property="titile" destination="w3i-0x-7av" id="Lej-9Y-IrY"/>
             </connections>
-            <point key="canvasLocation" x="103.62318840579711" y="71.651785714285708"/>
+            <point key="canvasLocation" x="116.66666666666667" y="91.741071428571431"/>
         </view>
     </objects>
-    <resources>
-        <image name="bt_cancelClear" width="43.5" height="43.5"/>
-    </resources>
 </document>
