--- a/EnglishAPPDemo/Base.lproj/Main.storyboard
+++ b/EnglishAPPDemo/Base.lproj/Main.storyboard
@@ -1018,7 +1018,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon_logo" translatesAutoresizingMaskIntoConstraints="NO" id="zJs-Ru-Q1p">
-                                <rect key="frame" x="88.999999999999986" y="85" width="236.00000000000003" height="73.666666666666686"/>
+                                <rect key="frame" x="89" y="85" width="236" height="73.666666666666686"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ky0-P2-Aeg">
                                 <rect key="frame" x="168" y="659" width="78" height="30"/>
@@ -1682,7 +1682,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P5W-Me-Jdr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4096" y="-1250"/>
+            <point key="canvasLocation" x="5654" y="-1245"/>
         </scene>
         <!--Test And Error Book Controller-->
         <scene sceneID="CCI-aU-tEK">
@@ -1808,7 +1808,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YGG-EJ-7z4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4096" y="-558"/>
+            <point key="canvasLocation" x="5655" y="-558"/>
         </scene>
         <!--BaseUI Navigation Controller-->
         <scene sceneID="viU-YJ-0EE">
