--- a/EnglishAPPDemo/View/BookView.xib
+++ b/EnglishAPPDemo/View/BookView.xib
@@ -8,9 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookView" customModule="EnglishAPPDemo" customModuleProvider="target">
+            <connections>
+                <outlet property="bookImageView" destination="k9G-fe-mlb" id="CG4-Vm-uwt"/>
+                <outlet property="progressLabel" destination="dtu-m8-81q" id="ePX-2N-KUY"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BookView" customModule="EnglishAPPDemo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="131" height="171"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -31,13 +36,10 @@
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="bookImageView" destination="k9G-fe-mlb" id="39U-27-835"/>
-                <outlet property="progressLabel" destination="dtu-m8-81q" id="sWS-Sa-vnw"/>
-            </connections>
-            <point key="canvasLocation" x="-200.72463768115944" y="-98.102678571428569"/>
+            <point key="canvasLocation" x="-211" y="-97"/>
         </view>
     </objects>
     <resources>
