--- a/EnglishAPPDemo/View/ListeningCellView.xib
+++ b/EnglishAPPDemo/View/ListeningCellView.xib
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListeningCellView" customModule="EnglishAPPDemo" customModuleProvider="target">
+            <connections>
+                <outlet property="beginAndPauseBtn" destination="ndK-nA-hqr" id="sdf-oG-TGQ"/>
+                <outlet property="commentLabel" destination="SAp-oM-uDY" id="7h6-Te-AcO"/>
+                <outlet property="enContent" destination="dCQ-x5-HnU" id="RUj-Wx-Hnb"/>
+                <outlet property="followReadBtn" destination="u0q-eN-ymf" id="sw4-LB-CHa"/>
+                <outlet property="starView" destination="1YE-UX-ivX" id="FRM-71-xhO"/>
+                <outlet property="tagLabel" destination="HmJ-dG-sKy" id="KNK-3Z-d7v"/>
+                <outlet property="tryListeningBtn" destination="8jf-hi-xW0" id="B52-XL-Sk6"/>
+                <outlet property="znContentLabel" destination="QX1-iQ-Xg1" id="ZPM-eb-ne4"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ListeningCellView" customModule="EnglishAPPDemo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="290" height="136"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -36,21 +47,36 @@
                     <color key="textColor" red="0.6588235294" green="0.6588235294" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8jf-hi-xW0">
-                    <rect key="frame" x="6" y="96" width="54" height="36"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" backgroundImage="bt_tryListen"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u0q-eN-ymf">
-                    <rect key="frame" x="58" y="97" width="61" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" backgroundImage="bt_followReading"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ndK-nA-hqr">
-                    <rect key="frame" x="123" y="91" width="45" height="45"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" backgroundImage="bt_beginPlay"/>
-                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="kfn-VD-fqE">
+                    <rect key="frame" x="6" y="96" width="169" height="38"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8jf-hi-xW0">
+                            <rect key="frame" x="0.0" y="0.0" width="54" height="38"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="54" id="5im-hg-TDh"/>
+                            </constraints>
+                            <state key="normal" backgroundImage="bt_tryListen"/>
+                            <connections>
+                                <action selector="tryListeningBtn:" destination="-1" eventType="touchUpInside" id="EZJ-bd-4td"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u0q-eN-ymf">
+                            <rect key="frame" x="55" y="0.0" width="68" height="38"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="68" id="F8G-SE-qdt"/>
+                                <constraint firstAttribute="height" constant="38" id="XhI-FU-RNv"/>
+                            </constraints>
+                            <state key="normal" backgroundImage="bt_followReading"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ndK-nA-hqr">
+                            <rect key="frame" x="124" y="0.0" width="45" height="38"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="45" id="83A-T3-sWA"/>
+                            </constraints>
+                            <state key="normal" backgroundImage="bt_beginPlay"/>
+                        </button>
+                    </subviews>
+                </stackView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1YE-UX-ivX" customClass="StarView" customModule="EnglishAPPDemo" customModuleProvider="target">
                     <rect key="frame" x="165" y="103" width="86" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -70,16 +96,12 @@
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="kfn-VD-fqE" secondAttribute="bottom" constant="2" id="e09-QB-DJF"/>
+                <constraint firstItem="kfn-VD-fqE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="6" id="oIT-Fs-Fzc"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="beginAndPauseBtn" destination="ndK-nA-hqr" id="JuB-wa-cnZ"/>
-                <outlet property="enContent" destination="dCQ-x5-HnU" id="dzi-Y6-gqU"/>
-                <outlet property="followReadBtn" destination="u0q-eN-ymf" id="0v2-rU-h5c"/>
-                <outlet property="starView" destination="1YE-UX-ivX" id="t3T-Bo-0OZ"/>
-                <outlet property="tryListeningBtn" destination="8jf-hi-xW0" id="Nhi-Mg-fpp"/>
-                <outlet property="znContentLabel" destination="QX1-iQ-Xg1" id="Ifq-0a-33y"/>
-            </connections>
             <point key="canvasLocation" x="-113.04347826086958" y="-496.875"/>
         </view>
     </objects>
